# MusCAD

./: .gitignore  .gutctags  Cargo.toml  LICENCE  README.md
debug/: Cargo.toml
debug/src/: intf.rs  main.rs
muscad-core/: Cargo.toml
muscad-core/benches/: vector3d.rs
muscad-core/proc_macros/: Cargo.toml
muscad-core/proc_macros/src/: lib.rs
muscad-core/src/: lib.rs
muscad-core/src/api/: mod.rs
muscad-core/src/api/concrete_types/: error.rs  face.rs  mod.rs  model.rs  point3d.rs
muscad-core/src/api/traits/: mod.rs
muscad-core/src/sealed/: consts.rs  mod.rs  project2d.rs
muscad-core/src/sealed/boolean/: hash.rs  mod.rs  mode.rs  solver.rs
muscad-core/src/sealed/boolean/brep/: analyse.rs  (+5 more)
muscad-core/src/sealed/bounding_box/: bbox_1d.rs  mod.rs
muscad-core/src/sealed/check/: mod.rs
muscad-core/src/sealed/edge/: mod.rs
muscad-core/src/sealed/entity/: mod.rs  unique_id.rs
muscad-core/src/sealed/error/: mod.rs  operation.rs
muscad-core/src/sealed/face/: iter.rs  mod.rs
muscad-core/src/sealed/float/: mod.rs
muscad-core/src/sealed/model/: entity_store.rs  mod.rs  position_hashkey.rs  vertex_pool.rs
muscad-core/src/sealed/plane/: distance_to_point.rs  mod.rs  negate.rs  on_plane.rs  to_project2d_functor.rs
muscad-core/src/sealed/poly2d/: area.rs  between.rs  collinear.rs  in_cone.rs  intersect.rs  left.rs  mod.rs  point_in_poly.rs
muscad-core/src/sealed/segment/: intersect_line_line.rs  intersect_line_plane.rs  length.rs  mod.rs  on_segment.rs
muscad-core/src/sealed/util/: each_cons_iter.rs  mod.rs  rc_iter.rs  simple_hash.rs
muscad-core/src/sealed/vector2d/: angle.rs  cross.rs  direction.rs  distance.rs  dot.rs  eql.rs  length.rs  mod.rs  new.rs  ops.rs  vec_eval.rs
muscad-core/src/sealed/vector3d/: cross.rs  direction.rs  distance.rs  dot.rs  eql.rs  length.rs  mod.rs  new.rs  ops.rs  vec_eval.rs
muscad-core/src/sealed/vertex/: mod.rs
muscad-gluon/: Cargo.toml
muscad-gluon/src/: lib.rs  wasm.rs
muscad-gluon/src/vm/: init.rs  intf.rs  mod.rs
muscad-gluon/src/vm/boolean/: mod.rs
muscad-gluon/src/vm/model/: mod.glu  mod.rs
muscad-gluon/src/vm/point3d/: mod.glu  mod.rs
muscad-wasm/: Cargo.toml
muscad-wasm/src/: lib.rs  threejs.rs
muscad-wasm/src/js_interface/: mod.rs
(+33 files in other folders)
